[bugfix] Field: icon align (#871)

--- a/packages/field/index.less
+++ b/packages/field/index.less
@@ -59,7 +59,6 @@
 
   &__clear {
     color: @gray;
-    font-size: 16px;
   }
 
   &__icon-container {
@@ -67,9 +66,7 @@
   }
 
   &__icon {
-    display: block;
-    font-size: 16px;
-    line-height: inherit;
+    display: block !important;
   }
 
   &__button {
